# flume

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  flume.h
benchmarks/: bench.cc
examples/: pipe_file.cc
test/: flume_test.cc
